# CPPCache

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  runtest.sh
E2E_tests/: not_full_inp.out  stress.in  wrong_inp.out  zero_cache_size.in  zero_hits.in
IdealCache/: CMakeLists.txt  runtest.sh
IdealCache/inc/: ideal_cache.hpp
IdealCache/src/: IC_unit_tests.cpp  benchmark.cpp  main.cpp
LFUCache/: CMakeLists.txt
LFUCache/inc/: lfu_cache.hpp
LFUCache/src/: LFUC_unit_tests.cpp  benchmark.cpp  main.cpp
Utilities/: CMakeLists.txt
Utilities/inc/: utilities.hpp
Utilities/src/: utilities.cpp
inc/: ideal_cache.hpp
scripts/: gen_bench_test.py  perf.sh
src/: ICmain.cpp  ideal_cache.cpp
